# rocket-mongodb-blogger

./: Cargo.toml  README.md  Rocket.toml
public/css/: main.css
public/style/: _classes.scss  _primitives.scss  main.scss
src/: main.rs
src/guards/: admin.rs
src/private/: admin.rs  blog.rs
src/public/: blog.rs  mod.rs
templates/: base.html.tera
templates/private/admin/: dashboard.html.tera  login.html.tera
templates/private/blog/: edit.html.tera  new.html.tera
templates/public/: blog.html.tera  blog_index.html.tera  index.html.tera
